# donkie-api

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 007bbfb5ce5c_initial.py  16c61dc73b01_webhooks.py
app/: base_controller.py  conf.py  logging_config.py  main.py  root_route.py  schema.py
app/admin/: routes.py
app/admin/controllers/: app_create.py  app_key_create.py
app/admin/models/: app_key.py  tenant_app.py  webhooks.py
app/authorization/: claims.py
app/conversations/: models.py  routes.py
app/conversations/controllers/: conversation.py  conversation_counts.py  conversation_create.py  conversation_detail.py  conversation_list.py  conversation_search.py  message_create.py  message_list.py  message_pagination.py  message_update.py  participant_create.py  tag_create.py
app/conversations/models/: conversation.py  message.py  participant.py  tag.py
app/services/: database.py  http_client.py  webhooks.py
scripts/: generate_keys.py
tests/services/: test_webhooks.py
