[project]
name = "donkie-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
    "greenlet>=3.5.3",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
]
