[project]
name = "donkie-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pyjwt>=2.13.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
    "greenlet>=3.5.3",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
]

[tool.ruff]
extend-exclude = ["app/schema.py"]
line-length = 88

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
# isort-compatible config here if needed
known-first-party = ["app"]
